fixed spacing

--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -11,7 +11,7 @@
 }
 
 #headimage {
-  height: 401px;
+  height: 400px;
   background: lightgray;
   position: relative;
   overflow: hidden;
